# projet-vision

./: .gitignore  README.md  backbones.py  create_debug_visuals.py  dataset.py  diagnose_model.py  inference.py  loss.py  model.py  pyproject.toml  requirements.txt  run_on_colab.ipynb  slurm_train.sh  system_logger.py  test_architecture.py  train.py  visualize_predictions.py
notebooks/: run_on_colab.ipynb
scripts/: benchmark_system.py  deploy_to_cluster.sh  prepare_debug_data.py
segmentation/: __init__.py  backbones.py  dataset.py  logger.py  model.py
